@@ -1,5 +1,7 @@
 2008-01-05  Andreas Kirschbaum
 
+	* Do not overwrite book contents with random text messages.
+
 	* Close book dialog when server connection breaks.
 
 	* ragnorok, prelude: Reset ground/spells/inventory/messages view
